# reader-server-rs

./: .cursorrules  Cargo.toml  LICENSE  README.md  build.rs  schema.sql
.github/workflows/: release.yml  test.yaml
doc/: 接口文档.md
src/: app.rs  auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  utils.rs
src/routes/: admin.rs  auth.rs  books.rs  mod.rs  reading.rs
src/tests/: mod.rs  test_admin.rs  test_reading.rs  test_user.rs
