[package]
edition = "2021"
name    = "reader-server-rs"
version = "0.1.0"

[dependencies]
# Web框架
axum           = { version = "0.8.3", features = ["multipart"] }
axum-extra     = { version = "0.10.1", features = ["typed-header"] }
http-body-util = "0.1.3"
hyper          = { version = "1.6.0" }
tokio          = { version = "1", features = ["full"] }
tower          = "0.5.2"
tower-http     = { version = "0.6.2", features = ["cors", "trace"] }

# 数据库
sqlx     = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "migrate", "macros"] }
tiny-orm = { version = "0.5.1", features = ["sqlite"] }

# 序列化/反序列化
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 密码哈希
argon2        = { version = "0.5" }
password-hash = { version = "0.5", features = ["getrandom"] }

# JWT令牌
jsonwebtoken = "9.3.1"

# 日志和错误处理
anyhow             = "1.0"
color-eyre         = "0.6"
thiserror          = "2.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 文件处理
bytes       = "1.4"
chrono      = { version = "0.4", features = ["serde"] }
futures     = "0.3"
rand        = "0.9"
regex       = "1.9"
regex-macro = "0.3.0"
tokio-util  = { version = "0.7", features = ["io"] }
uuid        = { version = "1.16", features = ["v4"] }

[dev-dependencies]
reqwest     = { version = "0.12", features = ["json", "multipart"] }
serial_test = "3.2.0"
tempfile    = "3.6"

[build-dependencies]
fuck-backslash  = "0.1.0"
path-absolutize = "3.1.1"
sqlx            = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio           = { version = "1", features = ["full"] }

[[bin]]
name = "reader-server"
path = "src/main.rs"

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
